# MacCleaner

./: .gitignore  CMakeLists.txt  README.md  cleanAndRebuild.sh  debugRebuild.sh  info.plist  pack_mac.sh  run.sh
app/: CMakeLists.txt  JunkModel.cpp  JunkModel.h  Main.qml  createIconSet.sh  main.cpp
core/: CMakeLists.txt  Scanner.cpp  Scanner.h
mac/: CMakeLists.txt  Trash.mm
rules/: safe_caches.yaml
tests/: CMakeLists.txt  test_scanner.cpp
